<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AuthenticateFeature.AuthenticationViews.AuthFragments.UserRegister"
    android:gravity="center">

    <!--
     Header
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical"
        android:id="@+id/user_auth_register_header"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="86dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/Fragment_Authentication_Register_Header"
            android:fontFamily="@font/inter"
            android:textSize="24sp"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:id="@+id/register_progress"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="12dp"
        android:layout_below="@id/user_auth_register_header"
        android:id="@+id/auth_register_form"
        android:paddingHorizontal="32dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_email_field"
            android:hint="@string/Authentication_Hint_Email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/Authentication_Hint_Password"
            android:id="@+id/register_password_field">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/key_24px"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:paddingStart="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:id="@+id/customer_card"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"
                android:tag="@string/Authentication_Card_Person">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:scaleType="center"
                        android:src="@drawable/person_24px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:fontFamily="@font/inter"
                        android:text="@string/Authentication_Card_Person" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:id="@+id/driver_card"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"
                android:tag="@string/Authentication_Card_Driver"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:scaleType="center"
                        android:src="@drawable/driver_24px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/Authentication_Card_Driver" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <Button
            android:id="@+id/registerbtn"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/Fragment_Authentication_Register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Continue to login"
            android:id="@+id/register_text_clickable"
            android:textColor="@color/linkTextType"/>
    </LinearLayout>



</RelativeLayout>